Upgrade vendored Saxon-HE source from 12.9.1 to 13.0.1
Replaces the vendored net.sf.saxon source tree with Saxon-HE 13.0
(from Saxonica's official saxon13-0source.zip) and re-applies the
fork's extension-element-factory hooks in Configuration.java and
StyleNodeFactory.java, which port over almost unchanged.

- pom.xml: version 13.0.1, xmlresolver 5.2.2 -> 6.0.23 (required by
  13.0), compiler source/target 11 -> 17 (13.0 uses records and
  pattern-matching instanceof, which need at least Java 16).
- extensions/xquery/SaxonQueryDefinition.java: ma.map.KeyValuePair
  became a record in 13.0 (key/value fields -> key()/value()
  accessors), and StructuredQName.fromLexicalQName's boolean
  allowEQName parameter became an int format flag (StructuredQName.QUL).
- All other upstream API surface used by the fork's additive code
  (extensions/, fork/, s9api, ma.map types, lib.Extension*) is
  unchanged between 12.9.1 and 13.0.

Full test suite passes unchanged: 2367/2367 tests, 0 failures across
XsltTest, SmokeTest, QT3XPathTest, and all fork enhancement tests
(ExtensionElementFactoryTest, EvaluateExtensionsTest,
QueryExtensionsTest, and the EXPath module tests).

Claude-Session: https://claude.ai/code/session_014e32j4UDdRrVDWa5qPdJYV